--- a/frontPage/frontPage.html
+++ b/frontPage/frontPage.html
@@ -9,8 +9,37 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="nav-logo">
-            <div class="logo"></div>
+        <div class="nav-logo border">
+            <div class="logo"><p style="background-image: url('amazon-logo.png');"></p></div>
+        </div>
+
+        <div class="nav-address border">
+            <p class="deliver">Deliver to</p>
+            <div class="add-icon">
+                <i class="fa-solid fa-location-dot"></i>
+                <p class="bd">Bangladesh</p>
+            </div>
+        </div>
+        <div class="nav-search">
+            <select class="nav-select">
+                <option>All</option>
+            </select>
+            <input placeholder="serach Amazon" class="nav-input">
+            <div class="search-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+        </div>
+        <div class="sign-in border">
+            <p><span>Hello, sign in</span></p>
+            <p class="nav-second">Account & List</p>
+        </div>
+        <div class="nav-return border">
+            <p><span>return</span></p>
+            <p class="nav-second"> & Orders</p>
+        </div>
+        <div class="nav-cart border">
+            <i class="fa-solid fa-cart-shopping"></i>
+            Cart
         </div>
     </div>
 </body>
